--- a/summative1-1.ipynb
+++ b/summative1-1.ipynb
@@ -57,7 +57,7 @@
     "   > *!Ensure the repo is public.*\n",
     "2. Copy the repository URL and paste it below\n",
     "\n",
-    "   [Double click on this cell to edit]\n"
+    "   > https://github.com/StemmedAxis06/M6006_assignment2_23360932014.git"
    ]
   },
   {
@@ -118,13 +118,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "241f43d2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n",
-    "..."
+    "import pandas as pd \n",
+    "\n",
+    "the_summative_df = pd.read_csv('./attendance_anonymised-1.csv')"
    ]
   },
   {
@@ -137,14 +138,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "19457295",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# your code here\n",
-    "..."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -417,7 +415,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "john_environment (3.13.7)",
    "language": "python",
    "name": "python3"
   },
@@ -431,7 +429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
