--- a/summative1-1.ipynb
+++ b/summative1-1.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "241f43d2",
    "metadata": {},
    "outputs": [],
@@ -137,12 +137,408 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "19457295",
+   "cell_type": "markdown",
+   "id": "d3d2d4f6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The first five rows of the dataset are as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ade657df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Person Code</th>\n",
+       "      <th>Unit Instance Code</th>\n",
+       "      <th>Calocc Code</th>\n",
+       "      <th>Surname</th>\n",
+       "      <th>Forename</th>\n",
+       "      <th>Long Description</th>\n",
+       "      <th>Register Event ID</th>\n",
+       "      <th>Object ID</th>\n",
+       "      <th>Register Event Slot ID</th>\n",
+       "      <th>Planned Start Date</th>\n",
+       "      <th>Planned End Date</th>\n",
+       "      <th>is Positive</th>\n",
+       "      <th>Postive Marks</th>\n",
+       "      <th>Negative Marks</th>\n",
+       "      <th>Usage Code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>129</td>\n",
+       "      <td>278</td>\n",
+       "      <td>2025</td>\n",
+       "      <td>Lewis</td>\n",
+       "      <td>Ursula</td>\n",
+       "      <td>Nursing</td>\n",
+       "      <td>37</td>\n",
+       "      <td>37</td>\n",
+       "      <td>574</td>\n",
+       "      <td>2025-04-03</td>\n",
+       "      <td>2023-11-01</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>129</td>\n",
+       "      <td>492</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>Lewis</td>\n",
+       "      <td>Ursula</td>\n",
+       "      <td>Italian</td>\n",
+       "      <td>726</td>\n",
+       "      <td>37</td>\n",
+       "      <td>1040</td>\n",
+       "      <td>2023-11-03</td>\n",
+       "      <td>2023-05-01</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>280</td>\n",
+       "      <td>1266</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>Lim</td>\n",
+       "      <td>Michael</td>\n",
+       "      <td>History</td>\n",
+       "      <td>846</td>\n",
+       "      <td>726</td>\n",
+       "      <td>1123</td>\n",
+       "      <td>2024-07-03</td>\n",
+       "      <td>2023-05-07</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>280</td>\n",
+       "      <td>1266</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>Lim</td>\n",
+       "      <td>Michael</td>\n",
+       "      <td>History</td>\n",
+       "      <td>846</td>\n",
+       "      <td>726</td>\n",
+       "      <td>653</td>\n",
+       "      <td>2024-10-09</td>\n",
+       "      <td>2025-04-29</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>280</td>\n",
+       "      <td>1266</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>Lim</td>\n",
+       "      <td>Michael</td>\n",
+       "      <td>History</td>\n",
+       "      <td>846</td>\n",
+       "      <td>726</td>\n",
+       "      <td>776</td>\n",
+       "      <td>2023-12-27</td>\n",
+       "      <td>2025-03-22</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Person Code  Unit Instance Code  Calocc Code Surname Forename  \\\n",
+       "0          129                 278         2025   Lewis   Ursula   \n",
+       "1          129                 492         2023   Lewis   Ursula   \n",
+       "2          280                1266         2024     Lim  Michael   \n",
+       "3          280                1266         2024     Lim  Michael   \n",
+       "4          280                1266         2023     Lim  Michael   \n",
+       "\n",
+       "  Long Description  Register Event ID  Object ID  Register Event Slot ID  \\\n",
+       "0          Nursing                 37         37                     574   \n",
+       "1          Italian                726         37                    1040   \n",
+       "2          History                846        726                    1123   \n",
+       "3          History                846        726                     653   \n",
+       "4          History                846        726                     776   \n",
+       "\n",
+       "  Planned Start Date Planned End Date is Positive  Postive Marks  \\\n",
+       "0         2025-04-03       2023-11-01           Y              1   \n",
+       "1         2023-11-03       2023-05-01           N              0   \n",
+       "2         2024-07-03       2023-05-07           N              0   \n",
+       "3         2024-10-09       2025-04-29           N              0   \n",
+       "4         2023-12-27       2025-03-22           N              0   \n",
+       "\n",
+       "   Negative Marks Usage Code  \n",
+       "0               1          O  \n",
+       "1               0          A  \n",
+       "2               0          A  \n",
+       "3               0          A  \n",
+       "4               0          A  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "the_summative_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b65d9a40",
+   "metadata": {},
+   "source": [
+    "Now, let's get our description of the dataframe, mostly to see its structure and what types of values are in each column:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3d5d8dbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 17053 entries, 0 to 17052\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column                  Non-Null Count  Dtype \n",
+      "---  ------                  --------------  ----- \n",
+      " 0   Person Code             17053 non-null  int64 \n",
+      " 1   Unit Instance Code      17053 non-null  int64 \n",
+      " 2   Calocc Code             17053 non-null  int64 \n",
+      " 3   Surname                 17053 non-null  object\n",
+      " 4   Forename                17053 non-null  object\n",
+      " 5   Long Description        17053 non-null  object\n",
+      " 6   Register Event ID       17053 non-null  int64 \n",
+      " 7   Object ID               17053 non-null  int64 \n",
+      " 8   Register Event Slot ID  17053 non-null  int64 \n",
+      " 9   Planned Start Date      17053 non-null  object\n",
+      " 10  Planned End Date        17053 non-null  object\n",
+      " 11  is Positive             17038 non-null  object\n",
+      " 12  Postive Marks           17053 non-null  int64 \n",
+      " 13  Negative Marks          17053 non-null  int64 \n",
+      " 14  Usage Code              17038 non-null  object\n",
+      "dtypes: int64(8), object(7)\n",
+      "memory usage: 2.0+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "the_summative_df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfdb5716",
+   "metadata": {},
+   "source": [
+    "Mostly the obvious. Though, through observation, we can see some of columns (is positive and usage code) do have null values. \n",
+    "\n",
+    "Finally, using the describe feature, we can also get an initial statistical summary of our dataframe, including values like the mean, median, and various quarterly percentiles:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8494459d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Person Code</th>\n",
+       "      <th>Unit Instance Code</th>\n",
+       "      <th>Calocc Code</th>\n",
+       "      <th>Register Event ID</th>\n",
+       "      <th>Object ID</th>\n",
+       "      <th>Register Event Slot ID</th>\n",
+       "      <th>Postive Marks</th>\n",
+       "      <th>Negative Marks</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>17053.000000</td>\n",
+       "      <td>17053.000000</td>\n",
+       "      <td>17053.000000</td>\n",
+       "      <td>17053.000000</td>\n",
+       "      <td>17053.000000</td>\n",
+       "      <td>17053.000000</td>\n",
+       "      <td>17053.000000</td>\n",
+       "      <td>17053.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>258.244473</td>\n",
+       "      <td>1252.674016</td>\n",
+       "      <td>2023.913212</td>\n",
+       "      <td>495.752536</td>\n",
+       "      <td>504.818742</td>\n",
+       "      <td>572.408139</td>\n",
+       "      <td>0.716531</td>\n",
+       "      <td>0.732892</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>146.904888</td>\n",
+       "      <td>530.609058</td>\n",
+       "      <td>0.774686</td>\n",
+       "      <td>292.031166</td>\n",
+       "      <td>275.174454</td>\n",
+       "      <td>313.946746</td>\n",
+       "      <td>0.450695</td>\n",
+       "      <td>0.442462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>2023.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>146.000000</td>\n",
+       "      <td>840.000000</td>\n",
+       "      <td>2023.000000</td>\n",
+       "      <td>223.000000</td>\n",
+       "      <td>267.000000</td>\n",
+       "      <td>297.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>265.000000</td>\n",
+       "      <td>1306.000000</td>\n",
+       "      <td>2024.000000</td>\n",
+       "      <td>515.000000</td>\n",
+       "      <td>504.000000</td>\n",
+       "      <td>574.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>384.000000</td>\n",
+       "      <td>1749.000000</td>\n",
+       "      <td>2025.000000</td>\n",
+       "      <td>788.000000</td>\n",
+       "      <td>733.000000</td>\n",
+       "      <td>839.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>498.000000</td>\n",
+       "      <td>1945.000000</td>\n",
+       "      <td>2025.000000</td>\n",
+       "      <td>984.000000</td>\n",
+       "      <td>984.000000</td>\n",
+       "      <td>1124.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Person Code  Unit Instance Code   Calocc Code  Register Event ID  \\\n",
+       "count  17053.000000        17053.000000  17053.000000       17053.000000   \n",
+       "mean     258.244473         1252.674016   2023.913212         495.752536   \n",
+       "std      146.904888          530.609058      0.774686         292.031166   \n",
+       "min        1.000000            4.000000   2023.000000           1.000000   \n",
+       "25%      146.000000          840.000000   2023.000000         223.000000   \n",
+       "50%      265.000000         1306.000000   2024.000000         515.000000   \n",
+       "75%      384.000000         1749.000000   2025.000000         788.000000   \n",
+       "max      498.000000         1945.000000   2025.000000         984.000000   \n",
+       "\n",
+       "          Object ID  Register Event Slot ID  Postive Marks  Negative Marks  \n",
+       "count  17053.000000            17053.000000   17053.000000    17053.000000  \n",
+       "mean     504.818742              572.408139       0.716531        0.732892  \n",
+       "std      275.174454              313.946746       0.450695        0.442462  \n",
+       "min        7.000000                0.000000       0.000000        0.000000  \n",
+       "25%      267.000000              297.000000       0.000000        0.000000  \n",
+       "50%      504.000000              574.000000       1.000000        1.000000  \n",
+       "75%      733.000000              839.000000       1.000000        1.000000  \n",
+       "max      984.000000             1124.000000       1.000000        1.000000  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "the_summative_df.describe()"
+   ]
   },
   {
    "cell_type": "markdown",
