--- a/summative1-1.ipynb
+++ b/summative1-1.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "241f43d2",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "ade657df",
    "metadata": {},
    "outputs": [
@@ -313,7 +313,7 @@
        "4               0          A  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "3d5d8dbf",
    "metadata": {},
    "outputs": [
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "8494459d",
    "metadata": {},
    "outputs": [
@@ -531,7 +531,7 @@
        "max      984.000000             1124.000000       1.000000        1.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,13 +550,305 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d3d81f52",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Person Code</th>\n",
+       "      <th>Unit Instance Code</th>\n",
+       "      <th>Calocc Code</th>\n",
+       "      <th>Surname</th>\n",
+       "      <th>Forename</th>\n",
+       "      <th>Long Description</th>\n",
+       "      <th>Register Event ID</th>\n",
+       "      <th>Object ID</th>\n",
+       "      <th>Register Event Slot ID</th>\n",
+       "      <th>Planned Start Date</th>\n",
+       "      <th>is Positive</th>\n",
+       "      <th>Postive Marks</th>\n",
+       "      <th>Negative Marks</th>\n",
+       "      <th>Usage Code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>129</td>\n",
+       "      <td>278</td>\n",
+       "      <td>2025</td>\n",
+       "      <td>Lewis</td>\n",
+       "      <td>Ursula</td>\n",
+       "      <td>Nursing</td>\n",
+       "      <td>37</td>\n",
+       "      <td>37</td>\n",
+       "      <td>574</td>\n",
+       "      <td>2025-04-03</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>129</td>\n",
+       "      <td>492</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>Lewis</td>\n",
+       "      <td>Ursula</td>\n",
+       "      <td>Italian</td>\n",
+       "      <td>726</td>\n",
+       "      <td>37</td>\n",
+       "      <td>1040</td>\n",
+       "      <td>2023-11-03</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>280</td>\n",
+       "      <td>1266</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>Lim</td>\n",
+       "      <td>Michael</td>\n",
+       "      <td>History</td>\n",
+       "      <td>846</td>\n",
+       "      <td>726</td>\n",
+       "      <td>1123</td>\n",
+       "      <td>2024-07-03</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>280</td>\n",
+       "      <td>1266</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>Lim</td>\n",
+       "      <td>Michael</td>\n",
+       "      <td>History</td>\n",
+       "      <td>846</td>\n",
+       "      <td>726</td>\n",
+       "      <td>653</td>\n",
+       "      <td>2024-10-09</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>280</td>\n",
+       "      <td>1266</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>Lim</td>\n",
+       "      <td>Michael</td>\n",
+       "      <td>History</td>\n",
+       "      <td>846</td>\n",
+       "      <td>726</td>\n",
+       "      <td>776</td>\n",
+       "      <td>2023-12-27</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17048</th>\n",
+       "      <td>28</td>\n",
+       "      <td>1867</td>\n",
+       "      <td>2025</td>\n",
+       "      <td>Ben-Khalil</td>\n",
+       "      <td>Kojo</td>\n",
+       "      <td>Project Management</td>\n",
+       "      <td>788</td>\n",
+       "      <td>974</td>\n",
+       "      <td>544</td>\n",
+       "      <td>2025-05-25</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17049</th>\n",
+       "      <td>375</td>\n",
+       "      <td>1867</td>\n",
+       "      <td>2025</td>\n",
+       "      <td>Becker</td>\n",
+       "      <td>Tariq</td>\n",
+       "      <td>Project Management</td>\n",
+       "      <td>788</td>\n",
+       "      <td>860</td>\n",
+       "      <td>544</td>\n",
+       "      <td>2025-05-25</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>P</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17050</th>\n",
+       "      <td>407</td>\n",
+       "      <td>1867</td>\n",
+       "      <td>2025</td>\n",
+       "      <td>Kumar</td>\n",
+       "      <td>Thomas</td>\n",
+       "      <td>Project Management</td>\n",
+       "      <td>788</td>\n",
+       "      <td>15</td>\n",
+       "      <td>432</td>\n",
+       "      <td>2025-02-16</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17051</th>\n",
+       "      <td>18</td>\n",
+       "      <td>1867</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>Durand</td>\n",
+       "      <td>Charles</td>\n",
+       "      <td>Project Management</td>\n",
+       "      <td>788</td>\n",
+       "      <td>376</td>\n",
+       "      <td>693</td>\n",
+       "      <td>2023-10-01</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>P</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17052</th>\n",
+       "      <td>68</td>\n",
+       "      <td>1867</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>Wu</td>\n",
+       "      <td>Yuki</td>\n",
+       "      <td>Project Management</td>\n",
+       "      <td>788</td>\n",
+       "      <td>293</td>\n",
+       "      <td>693</td>\n",
+       "      <td>2023-10-01</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>P</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>17053 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Person Code  Unit Instance Code  Calocc Code     Surname Forename  \\\n",
+       "0              129                 278         2025       Lewis   Ursula   \n",
+       "1              129                 492         2023       Lewis   Ursula   \n",
+       "2              280                1266         2024         Lim  Michael   \n",
+       "3              280                1266         2024         Lim  Michael   \n",
+       "4              280                1266         2023         Lim  Michael   \n",
+       "...            ...                 ...          ...         ...      ...   \n",
+       "17048           28                1867         2025  Ben-Khalil     Kojo   \n",
+       "17049          375                1867         2025      Becker    Tariq   \n",
+       "17050          407                1867         2025       Kumar   Thomas   \n",
+       "17051           18                1867         2023      Durand  Charles   \n",
+       "17052           68                1867         2023          Wu     Yuki   \n",
+       "\n",
+       "         Long Description  Register Event ID  Object ID  \\\n",
+       "0                 Nursing                 37         37   \n",
+       "1                 Italian                726         37   \n",
+       "2                 History                846        726   \n",
+       "3                 History                846        726   \n",
+       "4                 History                846        726   \n",
+       "...                   ...                ...        ...   \n",
+       "17048  Project Management                788        974   \n",
+       "17049  Project Management                788        860   \n",
+       "17050  Project Management                788         15   \n",
+       "17051  Project Management                788        376   \n",
+       "17052  Project Management                788        293   \n",
+       "\n",
+       "       Register Event Slot ID Planned Start Date is Positive  Postive Marks  \\\n",
+       "0                         574         2025-04-03           Y              1   \n",
+       "1                        1040         2023-11-03           N              0   \n",
+       "2                        1123         2024-07-03           N              0   \n",
+       "3                         653         2024-10-09           N              0   \n",
+       "4                         776         2023-12-27           N              0   \n",
+       "...                       ...                ...         ...            ...   \n",
+       "17048                     544         2025-05-25           N              0   \n",
+       "17049                     544         2025-05-25           Y              1   \n",
+       "17050                     432         2025-02-16           N              0   \n",
+       "17051                     693         2023-10-01           Y              1   \n",
+       "17052                     693         2023-10-01           Y              1   \n",
+       "\n",
+       "       Negative Marks Usage Code  \n",
+       "0                   1          O  \n",
+       "1                   0          A  \n",
+       "2                   0          A  \n",
+       "3                   0          A  \n",
+       "4                   0          A  \n",
+       "...               ...        ...  \n",
+       "17048               0          A  \n",
+       "17049               1          P  \n",
+       "17050               0          A  \n",
+       "17051               1          P  \n",
+       "17052               1          P  \n",
+       "\n",
+       "[17053 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here\n",
-    "..."
+    "the_summative_df = the_summative_df.drop(columns=['Planned End Date'])\n",
+    "\n",
+    "the_summative_df"
    ]
   },
   {
