--- a/summative1-1.ipynb
+++ b/summative1-1.ipynb
@@ -879,13 +879,311 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ced76e74",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Person Code</th>\n",
+       "      <th>Module Code</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Surname</th>\n",
+       "      <th>Forename</th>\n",
+       "      <th>Module Name</th>\n",
+       "      <th>Event ID</th>\n",
+       "      <th>Object ID</th>\n",
+       "      <th>Event Slot ID</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Has Attended</th>\n",
+       "      <th>Attended</th>\n",
+       "      <th>NotAttended</th>\n",
+       "      <th>Attendance Code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>129</td>\n",
+       "      <td>278</td>\n",
+       "      <td>2025</td>\n",
+       "      <td>Lewis</td>\n",
+       "      <td>Ursula</td>\n",
+       "      <td>Nursing</td>\n",
+       "      <td>37</td>\n",
+       "      <td>37</td>\n",
+       "      <td>574</td>\n",
+       "      <td>2025-04-03</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>129</td>\n",
+       "      <td>492</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>Lewis</td>\n",
+       "      <td>Ursula</td>\n",
+       "      <td>Italian</td>\n",
+       "      <td>726</td>\n",
+       "      <td>37</td>\n",
+       "      <td>1040</td>\n",
+       "      <td>2023-11-03</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>280</td>\n",
+       "      <td>1266</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>Lim</td>\n",
+       "      <td>Michael</td>\n",
+       "      <td>History</td>\n",
+       "      <td>846</td>\n",
+       "      <td>726</td>\n",
+       "      <td>1123</td>\n",
+       "      <td>2024-07-03</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>280</td>\n",
+       "      <td>1266</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>Lim</td>\n",
+       "      <td>Michael</td>\n",
+       "      <td>History</td>\n",
+       "      <td>846</td>\n",
+       "      <td>726</td>\n",
+       "      <td>653</td>\n",
+       "      <td>2024-10-09</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>280</td>\n",
+       "      <td>1266</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>Lim</td>\n",
+       "      <td>Michael</td>\n",
+       "      <td>History</td>\n",
+       "      <td>846</td>\n",
+       "      <td>726</td>\n",
+       "      <td>776</td>\n",
+       "      <td>2023-12-27</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17048</th>\n",
+       "      <td>28</td>\n",
+       "      <td>1867</td>\n",
+       "      <td>2025</td>\n",
+       "      <td>Ben-Khalil</td>\n",
+       "      <td>Kojo</td>\n",
+       "      <td>Project Management</td>\n",
+       "      <td>788</td>\n",
+       "      <td>974</td>\n",
+       "      <td>544</td>\n",
+       "      <td>2025-05-25</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17049</th>\n",
+       "      <td>375</td>\n",
+       "      <td>1867</td>\n",
+       "      <td>2025</td>\n",
+       "      <td>Becker</td>\n",
+       "      <td>Tariq</td>\n",
+       "      <td>Project Management</td>\n",
+       "      <td>788</td>\n",
+       "      <td>860</td>\n",
+       "      <td>544</td>\n",
+       "      <td>2025-05-25</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>P</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17050</th>\n",
+       "      <td>407</td>\n",
+       "      <td>1867</td>\n",
+       "      <td>2025</td>\n",
+       "      <td>Kumar</td>\n",
+       "      <td>Thomas</td>\n",
+       "      <td>Project Management</td>\n",
+       "      <td>788</td>\n",
+       "      <td>15</td>\n",
+       "      <td>432</td>\n",
+       "      <td>2025-02-16</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17051</th>\n",
+       "      <td>18</td>\n",
+       "      <td>1867</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>Durand</td>\n",
+       "      <td>Charles</td>\n",
+       "      <td>Project Management</td>\n",
+       "      <td>788</td>\n",
+       "      <td>376</td>\n",
+       "      <td>693</td>\n",
+       "      <td>2023-10-01</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>P</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17052</th>\n",
+       "      <td>68</td>\n",
+       "      <td>1867</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>Wu</td>\n",
+       "      <td>Yuki</td>\n",
+       "      <td>Project Management</td>\n",
+       "      <td>788</td>\n",
+       "      <td>293</td>\n",
+       "      <td>693</td>\n",
+       "      <td>2023-10-01</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>P</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>17053 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Person Code  Module Code  Year     Surname Forename  \\\n",
+       "0              129          278  2025       Lewis   Ursula   \n",
+       "1              129          492  2023       Lewis   Ursula   \n",
+       "2              280         1266  2024         Lim  Michael   \n",
+       "3              280         1266  2024         Lim  Michael   \n",
+       "4              280         1266  2023         Lim  Michael   \n",
+       "...            ...          ...   ...         ...      ...   \n",
+       "17048           28         1867  2025  Ben-Khalil     Kojo   \n",
+       "17049          375         1867  2025      Becker    Tariq   \n",
+       "17050          407         1867  2025       Kumar   Thomas   \n",
+       "17051           18         1867  2023      Durand  Charles   \n",
+       "17052           68         1867  2023          Wu     Yuki   \n",
+       "\n",
+       "              Module Name  Event ID  Object ID  Event Slot ID        Date  \\\n",
+       "0                 Nursing        37         37            574  2025-04-03   \n",
+       "1                 Italian       726         37           1040  2023-11-03   \n",
+       "2                 History       846        726           1123  2024-07-03   \n",
+       "3                 History       846        726            653  2024-10-09   \n",
+       "4                 History       846        726            776  2023-12-27   \n",
+       "...                   ...       ...        ...            ...         ...   \n",
+       "17048  Project Management       788        974            544  2025-05-25   \n",
+       "17049  Project Management       788        860            544  2025-05-25   \n",
+       "17050  Project Management       788         15            432  2025-02-16   \n",
+       "17051  Project Management       788        376            693  2023-10-01   \n",
+       "17052  Project Management       788        293            693  2023-10-01   \n",
+       "\n",
+       "      Has Attended  Attended  NotAttended Attendance Code  \n",
+       "0                Y         1            1               O  \n",
+       "1                N         0            0               A  \n",
+       "2                N         0            0               A  \n",
+       "3                N         0            0               A  \n",
+       "4                N         0            0               A  \n",
+       "...            ...       ...          ...             ...  \n",
+       "17048            N         0            0               A  \n",
+       "17049            Y         1            1               P  \n",
+       "17050            N         0            0               A  \n",
+       "17051            Y         1            1               P  \n",
+       "17052            Y         1            1               P  \n",
+       "\n",
+       "[17053 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here\n",
-    "..."
+    "# To complete this step, we shall use a dictionary and rename the columns through parsing the...\n",
+    "# rename command through said dictionary\n",
+    "\n",
+    "# 1. Create the Dictionary\n",
+    "# NOTE: Some of the columns have the same requested name change and are thus not being included\n",
+    "# i.e. Surname -> Surname\n",
+    "rename_them_columns = {'Unit Instance Code' : 'Module Code', \n",
+    "                       'Calocc Code' : 'Year', \n",
+    "                       'Long Description' : 'Module Name',\n",
+    "                       'Register Event ID' : 'Event ID',\n",
+    "                       'Register Event Slot ID' : 'Event Slot ID', \n",
+    "                       'Planned Start Date' : 'Date',\n",
+    "                       'is Positive' : 'Has Attended',\n",
+    "                       'Postive Marks' : 'Attended', # there was a spelling mistake here that killed me lol\n",
+    "                       'Negative Marks' : 'NotAttended',\n",
+    "                       'Usage Code' : 'Attendance Code'}\n",
+    "\n",
+    "# Now, we use this dictionary as stated\n",
+    "the_summative_df = the_summative_df.rename(columns = rename_them_columns)\n",
+    "\n",
+    "# And we check\n",
+    "the_summative_df"
    ]
   },
   {
