--- a/summative1-1.ipynb
+++ b/summative1-1.ipynb
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ced76e74",
    "metadata": {},
    "outputs": [
@@ -1506,7 +1506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "6d5c9465",
    "metadata": {},
    "outputs": [
@@ -1530,7 +1530,7 @@
        "       'Demographics'], dtype=object)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1552,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "d015c275",
    "metadata": {},
    "outputs": [
@@ -1602,6 +1602,53 @@
    "metadata": {},
    "source": [
     "7. **[For L6 students only]** Add a column, titled \"Student Overall Attendance\", with the average attendance for the student. Add a column, titled \"Standardised Student Overall Attendance\", with the z-scores of \"Student Overall Attendance\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "6db1363c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Person Code  Student Overall Attendance  \\\n",
+      "0          129                    0.875000   \n",
+      "1          129                    0.875000   \n",
+      "2          280                    0.216216   \n",
+      "3          280                    0.216216   \n",
+      "4          280                    0.216216   \n",
+      "\n",
+      "   Standardised Student Overall Attendance  \n",
+      "0                                 0.777499  \n",
+      "1                                 0.777499  \n",
+      "2                                -2.454698  \n",
+      "3                                -2.454698  \n",
+      "4                                -2.454698  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# First thing we need to do is isolate each student in the data and calculate their attendance \n",
+    "how_many_tapped_in = the_summative_df.groupby('Person Code')['Has Attended'].mean()\n",
+    "\n",
+    "# Now, we add each student's overall attendance as a column, matching them with the relevant Person Code\n",
+    "the_summative_df['Student Overall Attendance'] = the_summative_df['Person Code'].map(how_many_tapped_in)\n",
+    "\n",
+    "# Now, we calculate our Z-scores\n",
+    "# For those wondering why we do tihs, the z-score tells us how many standard deviations each student is from the mean\n",
+    "# I.e. We can tell how far a student's attendance is from the average, which likely leads to whether action needs to be taken\n",
+    "the_summative_df['Standardised Student Overall Attendance'] = (\n",
+    "    the_summative_df['Student Overall Attendance'] - \n",
+    "    the_summative_df['Student Overall Attendance'].mean()) / (\n",
+    "    the_summative_df['Student Overall Attendance'].std()\n",
+    "    )\n",
+    "\n",
+    "# Now, a quick check (doing a print this time cause there are WAY too many columns)\n",
+    "print(the_summative_df[['Person Code', 'Student Overall Attendance','Standardised Student Overall Attendance']].head())\n",
+    "    "
    ]
   },
   {
