Checkpoint: Cleaned DataFrame and a line or bar plot of attendance over time for one module.

--- a/summative1-1.ipynb
+++ b/summative1-1.ipynb
@@ -1653,6 +1653,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f2c5db77",
+   "metadata": {},
+   "source": [
+    "Now, we can move onto Exercise 3 (this markdown exists so I can commit the checkpoint lol)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "82f1fdd3",
    "metadata": {},
    "source": [
