Added Exercise 3 Disclaimer

--- a/summative1-1.ipynb
+++ b/summative1-1.ipynb
@@ -1552,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "d015c275",
    "metadata": {},
    "outputs": [
@@ -1679,6 +1679,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d3f01276",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We need to quickly take our clean dataframe and save it so we can use it in this exercise.\n",
+    "the_summative_df.to_csv('cleaned_attendance_anonymised-1.csv', index = False)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "66b767f0",
    "metadata": {},
@@ -1698,6 +1709,14 @@
     "✅ **Checkpoint:** The app runs without errors and displays the plot from Exercise 2 in a browser.\n",
     "\n",
     "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2357b2e3",
+   "metadata": {},
+   "source": [
+    "NOTE: For Exercise 3, I included the Exercise 2 plot as part of the L6 exercise, considering you can simply select the history module and get the exact same graph"
    ]
   },
   {
